--- a/main.yml
+++ b/main.yml
@@ -19,10 +19,10 @@ jobs:
         node-version: '18'
 
     - name: Build Docker Image
-      run: docker build -t ${{ secrets.DOCKER_USERNAME }}/nodejs-demo:latest .
+      run: docker build -t ${{ secrets.DOCKER_nodejs }}/nodejs-demo:latest .
 
     - name: Log in to DockerHub
-      run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+      run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_nodejs }}" --password-stdin
 
     - name: Push Docker Image
-      run: docker push ${{ secrets.DOCKER_USERNAME }}/nodejs-demo:latest
+      run: docker push ${{ secrets.DOCKER_nodejs }}/nodejs-demo:latest
